k8s/istio/security/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: svp
spec:
  mtls:
    mode: STRICT
