k8s/istio/security/allow-frontend-service.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-frontend-service
  namespace: svp
spec:
  selector:
    matchLabels:
      app: frontend-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
